# project2-csci338

./: README.md  check.sh  gif  gif.py  gifDictionary.py  giphyAPI.py  giphyCLI.py  pyproject.toml  readme.md  test.py
