[tool.poetry]
name = "project2-csci338"
version = "0.1.0"
description = ""
authors = ["Karsten <karsten.griffo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
click = "^8.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
